--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.1.1",
     "@auth0/angular-jwt": "^5.0.2",
     "file-saver": "^2.0.5",
+    "file-saver-es": "^2.0.5",
     "lodash-es": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
