--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "file-saver-es": "^2.0.5",
     "lodash-es": "^4.17.21",
+    "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
